<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="condition"
            type="com.example.weatherapp.model.condition.Condition" />
    </data>

    <FrameLayout
        android:id="@+id/frame_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--App Background-->
        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/imv_app_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@mipmap/app_bg2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/WeatherToolbar" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".ui.main.view.MainActivity">

                    <TextView
                        android:id="@+id/tv_city_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/lbl_n_a"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size_30"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Ho Chi Minh City" />

                    <TextView
                        android:id="@+id/tv_update_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:text="@{condition.convertEpochTime()}"
                        android:textSize="@dimen/text_size_25"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_city_name"
                        tools:text="T4, 11:30 pm" />

                    <ImageView
                        android:id="@+id/img_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_xlarge"
                        android:contentDescription="@string/weather_icon"
                        android:padding="@dimen/padding_small"
                        android:scaleType="center"
                        app:layout_constraintBottom_toBottomOf="@id/tv_text"
                        app:layout_constraintEnd_toStartOf="@id/tv_text"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_update_time"
                        app:setWeatherIcon="@{condition.weatherIcon}"
                        tools:src="@drawable/icon_1" />

                    <TextView
                        android:id="@+id/tv_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_xlarge"
                        android:text="@{condition.weatherText}"
                        android:textSize="@dimen/text_size_25"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/img_weather"
                        app:layout_constraintTop_toBottomOf="@id/tv_update_time"
                        tools:text="Mostly cloudy" />

                    <TextView
                        android:id="@+id/tv_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@{condition.temperature.temperature}"
                        android:textSize="@dimen/text_size_60"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/img_weather"
                        tools:text="27°C" />

                    <include
                        android:id="@+id/constraint_details"
                        layout="@layout/detail_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tv_temperature"
                        bind:condition="@{condition}" />

                    <com.example.weatherapp.custom_view.TitleView
                        android:id="@+id/tv_lbl_hour_forecast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:label="@string/hour"
                        app:layout_constraintTop_toBottomOf="@id/constraint_details"/>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_hour_forecast"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_large"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:layout_marginBottom="@dimen/margin_normal"
                        app:cardBackgroundColor="@color/card_view_bg"
                        app:cardCornerRadius="@dimen/card_radius"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_lbl_hour_forecast"
                        app:strokeColor="@color/card_stroke_color"
                        app:strokeWidth="@dimen/card_stroke">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_hour_forecast"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_normal"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            tools:listitem="@layout/forecast_hour_item" />
                    </com.google.android.material.card.MaterialCardView>

                    <!--region 5 Days Forecast-->
                    <com.example.weatherapp.custom_view.TitleView
                        android:id="@+id/tv_lbl_daily_forecast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:label="@string/lbl_daily_forecast"
                        app:layout_constraintTop_toBottomOf="@id/card_hour_forecast"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_daily_forecast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_large"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:layout_marginBottom="@dimen/margin_large"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_lbl_daily_forecast"
                        tools:listitem="@layout/forecast_daily_item" />
                    <!--endregion-->

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </LinearLayout>
        <include
            android:id="@+id/include_progress"
            layout="@layout/progress_bar" />
    </FrameLayout>
</layout>